--- a/app/admin/view/system/about/add.html
+++ b/app/admin/view/system/about/add.html
@@ -20,6 +20,18 @@
     <div class="layui-row">
         <form class="layui-form">
             <div class="layui-form-item">
+                <label for="url" class="layui-form-label">
+                    <span class="x-red">*</span>url参数
+                </label>
+                <div class="layui-input-block" style="width: 50%;">
+                    <input type="text" id="url" name="url" required="" lay-verify="required" autocomplete="off"
+                        class="layui-input">
+                </div>
+                <div class="layui-form-mid layui-word-aux">
+
+                </div>
+            </div>
+            <div class="layui-form-item">
                 <label for="title" class="layui-form-label">
                     <span class="x-red">*</span>Title
                 </label>
