--- a/public/static/frontend/desktop/css/page/About.less
+++ b/public/static/frontend/desktop/css/page/About.less
@@ -1,8 +1,8 @@
 /**
-* @name: home.less
-* @description: 公共模块css
+* @name: About.less
+* @description: Aboutcss
 * @author: Alan(alan_webdeveloper@163.com)
-* @update: 2020-05-28 10:23
+* @update: 2020-07-20 10:00
 */
 @import "../public/mixins";
 @import "../public/variables";
@@ -10,6 +10,9 @@
 .g-hd .nav {
   position: static;
   background: @whiteColor;
+  .item-children {
+    top: 130px;
+  }
 }
 section {
   min-height: 800px;
