--- a/public/static/frontend/desktop/css/page/About.css
+++ b/public/static/frontend/desktop/css/page/About.css
@@ -1,12 +1,15 @@
 /**
-* @name: home.less
-* @description: 公共模块css
+* @name: About.less
+* @description: Aboutcss
 * @author: Alan(alan_webdeveloper@163.com)
-* @update: 2020-05-28 10:23
+* @update: 2020-07-20 10:00
 */
 .g-hd .nav {
   position: static;
   background: #fff;
+}
+.g-hd .nav .item-children {
+  top: 130px;
 }
 section {
   min-height: 800px;
