--- a/app/frontend/view/desktop/common/base.html
+++ b/app/frontend/view/desktop/common/base.html
@@ -30,6 +30,19 @@
     {/block}
 </section>
 
+<!-- 侧边栏第三方账户 -->
+<div class="g-aside">
+    <div class="g-top" id="g-top" title="Go Top"><span class="iconfont iconyooxi"></span></div>
+    <div class="community">
+        <ul>
+            <li><a href="#" title="Facebook"><span class="iconfont iconicon-test1"></span></a></li>
+            <li><a href="#" title="Twitter"><span class="iconfont iconicon-test2"></span></a></li>
+            <li><a href="#" title="YouTube"><span class="iconfont iconyoutube"></span></a></li>
+            <li><a href="#" title="Instagram"><span class="iconfont iconinstagram"></span></a></li>
+        </ul>
+    </div>
+</div>
+
 {block name="footer"}
 {include file="desktop/common/footer_en_us"}
 {/block}
