--- a/app/frontend/view/desktop/about/detail.html
+++ b/app/frontend/view/desktop/about/detail.html
@@ -1,15 +1,15 @@
 {extend name="desktop/common/base" /}
-<title>{$BaseSetting.title} - mintHouz</title>
-<!--{block name="seo"}-->
-<meta name="description" content="{$BaseSetting.description}">
-<meta name="keywords" content="{$BaseSetting.keywords}">
-<!--{/block}-->
+<title>{$data.title} - mintHouz</title>
+{block name="seo"}
+<meta name="description" content="{$data.description}">
+<meta name="keywords" content="{$data.keywords}">
+{/block}
 {block name="style"}
-<link rel="stylesheet" href="{{frontend}}/desktop/css/page/About-Detail.css">
+<link rel="stylesheet" href="{{frontend}}/desktop/css/page/About.css">
 {/block}
 
 {block name="body"}
-
+{$data.desktop|raw}
 {/block}
 
 <!--私有业务开始-->
