--- a/app/frontend/view/desktop/about/detail.html
+++ b/app/frontend/view/desktop/about/detail.html
@@ -9,10 +9,20 @@
 {/block}
 
 {block name="body"}
+<div class="About-menu">
+    <ul class="common-width">
+        {volist name="list" id="vo"}
+        <li class="menu-item {if($current == $vo.url)}active{/if}"><a href="/{$code}/about/{$vo.url}">{$vo.title}</a></li>
+        {/volist}
+    </ul>
+</div>
 {$data.desktop|raw}
 {/block}
 
 <!--私有业务开始-->
 {block name="javascript"}
+<script>
+
+</script>
 {/block}
 <!--私有业务结束-->
