--- a/app/frontend/view/desktop/about/index.html
+++ b/app/frontend/view/desktop/about/index.html
@@ -9,6 +9,14 @@
 {/block}
 
 {block name="body"}
+<div class="About-menu">
+    <ul class="common-width">
+        <li class="menu-item"><a href="#">About US</a></li>
+        <li class="menu-item active"><a href="#">User Agreement</a></li>
+        <li class="menu-item"><a href="#">Privacy Policy</a></li>
+        <li class="menu-item"><a href="#">Certification</a></li>
+    </ul>
+</div>
 {$data.desktop|raw}
 {/block}
 
