--- a/app/frontend/view/desktop/common/base.html
+++ b/app/frontend/view/desktop/common/base.html
@@ -44,7 +44,7 @@
 </div>
 
 {block name="footer"}
-{include file="desktop/common/footer_en_us"}
+{include file="desktop/common/footer"}
 {/block}
 
 <script src="{{frontend}}/lib/JQuery/JQuery-3.4.0.js"></script>
