--- a/app/frontend/view/desktop/product/index.html
+++ b/app/frontend/view/desktop/product/index.html
@@ -292,15 +292,17 @@
 <section>
 
     <div class="g-path">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li> > </li>
-            <li><a href="#">Product</a></li>
-        </ul>
+        <div class="common-width">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li> > </li>
+                <li><a href="#">Product</a></li>
+            </ul>
+        </div>
     </div>
 
     <div class="product-container">
-        <div class="product-list">
+        <div class="product-list common-width">
             <div class="title">
                 <h3><span class="iconfont iconarrow-down"></span> USB Fan</h3>
             </div>
@@ -412,7 +414,7 @@
                 </div>
             </div>
         </div>
-        <div class="product-list">
+        <div class="product-list common-width">
             <div class="title">
                 <h3><span class="iconfont iconarrow-down"></span> USB Fan</h3>
             </div>
@@ -536,7 +538,7 @@
                 </div>
             </div>
         </div>
-        <div class="product-list">
+        <div class="product-list common-width">
             <div class="title">
                 <h3><span class="iconfont iconarrow-down"></span> USB Fan</h3>
             </div>
