手机端切模块

--- a/app/frontend/view/mobile/product/index.html
+++ b/app/frontend/view/mobile/product/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{frontend}}/lib/Swiper/swiper.min.css">
     <link rel="stylesheet" href="{{frontend}}/lib/iconfont/iconfont.css">
     <link rel="stylesheet" href="{{frontend}}/mobile/css/public/components.css">
-    <link rel="stylesheet" href="{{frontend}}/css/page/Product-list.css">
+    <link rel="stylesheet" href="{{frontend}}/mobile/css/page/Product-list.css">
 </head>
 <body>
 
@@ -16,8 +16,8 @@
     <div class="nav" id="nav">
         <div class="logo">
             <h1>
-                <a href="./Home.html">
-                    <img src="../img/minthouz-slogan.png" alt="">
+                <a href="#">
+                    <img src="{$BaseSetting.logo}" alt="">
                 </a>
             </h1>
         </div>
