--- a/public/static/frontend/mobile/css/page/Home.less
+++ b/public/static/frontend/mobile/css/page/Home.less
@@ -20,7 +20,7 @@
     }
 }
 
-.min {
+.hot {
     margin: 10px;
     .min-list .min-item {
         margin-bottom: 10px;
@@ -97,12 +97,6 @@
     }
 }
 
-.video {
-
-    .video-list {
-
-    }
-}
 .video {
     .clearFix();
     h3 {
