--- a/public/static/frontend/mobile/css/page/About.less
+++ b/public/static/frontend/mobile/css/page/About.less
@@ -6,8 +6,29 @@
 */
 @import "../public/mixins";
 @import "../public/variables";
-
 section {
   min-height: 800px;
 
+  .About-menu {
+    .clearFix();
+    padding: 22px 10px 14px;
+    .menu-item {
+      .fl();
+      padding: 0 15px;
+      border-left: 1px solid @borderColor;
+      &:nth-of-type(1) {
+        padding-left: 0;
+        border-left: none;
+      }
+    }
+    .menu-item a {
+      color: #333;
+      &:hover {
+        color: @activeColor;
+      }
+    }
+    .active a {
+      color: @activeColor;
+    }
+  }
 }
