--- a/public/static/frontend/mobile/css/public/components.css
+++ b/public/static/frontend/mobile/css/public/components.css
@@ -172,6 +172,36 @@ body {
   transition: all 0.3S;
   font-size: 14px;
 }
+.g-notice {
+  padding: 20px 10px;
+  text-align: center;
+  color: #888;
+  font-size: 12px;
+}
+.g-notice .des {
+  display: inline;
+  color: #888;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transform: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.g-notice .des:hover {
+  color: #00A82D;
+  text-decoration: underline;
+}
+.g-notice .close {
+  margin-left: 20px;
+  cursor: pointer;
+}
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .g-notice {
+    height: 40px;
+    line-height: 40px;
+    font-size: 12px;
+  }
+}
 .g-hd {
   width: 100%;
   background: #00A82D;
