--- a/public/static/frontend/mobile/css/public/components.less
+++ b/public/static/frontend/mobile/css/public/components.less
@@ -107,6 +107,33 @@ body {
     //padding-top: 60px;
 }
 
+//重大通知
+.g-notice {
+    padding: 20px 10px;
+    text-align: center;
+    color: @whiteSmoke;
+    font-size: 12px;
+    .des {
+        display: inline;
+        color: @whiteSmoke;
+        #transition(all .2s linear);
+        &:hover {
+            color: @activeColor;
+            text-decoration: underline;
+        }
+    }
+    .close {
+        margin-left: 20px;
+        cursor: pointer;
+    }
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+        height: 40px;
+        line-height: 40px;
+        font-size: 12px;
+    }
+}
+//重大通知
+
 //g-hd
 .g-hd {
     width: 100%;
