--- a/app/frontend/view/desktop/common/nav.html
+++ b/app/frontend/view/desktop/common/nav.html
@@ -3,8 +3,8 @@
     <div class="hd">
         <div class="common-width">
             <div class="about">
-                <span><a href="#">MINTHOUZ</a></span>
-                <span><a href="#">About Us</a></span>
+                <span><a href="/">MINTHOUZ</a></span>
+                <span><a href="/{$code}/about.html">About Us</a></span>
                 <span><a href="#" target="_blank">Find Us on Facebook</a></span>
             </div>
 
@@ -28,7 +28,7 @@
             <div class="menu-box">
                 <ul class="menu-list" id="menu-list">
                     <li class="menu-item">
-                        <a class="item-link" href="#">All Products</a>
+                        <a class="item-link" href="/{$code}/product/index.html">All Products</a>
 
                         <!--<div class="all-category">
                             <ul class="category-list">
