--- a/app/frontend/view/mobile/common/nav.html
+++ b/app/frontend/view/mobile/common/nav.html
@@ -17,7 +17,7 @@
     <div class="menu-box" id="menu-box">
         <ul class="menu-list">
             <li class="menu-item">
-                <a class="item-link" href="./product-list.html">All Products</a>
+                <a class="item-link" href="/{$code}/product/index.html">All Products</a>
             </li>
             <li class="menu-item">
                 <a class="item-link" href="./product-list.html">USB Fan</a>
