pc端产品列表+产品详情切模块

--- a/app/frontend/view/desktop/common/nav.html
+++ b/app/frontend/view/desktop/common/nav.html
@@ -19,7 +19,7 @@
         <div class="common-width">
             <div class="logo">
                 <h1>
-                    <a href="#">
+                    <a href="/">
                         <img src="{$BaseSetting.logo}" alt="">
                     </a>
                 </h1>
@@ -48,41 +48,41 @@
                     </li>
                     {volist name="treeCategory" id="vo"}
                     <li class="menu-item">
-                        <a class="item-link" href="#">{$vo.name}</a>
+                        <a class="item-link" href="/{$code}/product/index.html">{$vo.name}</a>
                         <div class="item-children">
                             <ul class="common-width">
                                 <li class="children-list">
-                                    <a href="#">
+                                    <a href="/{$code}/product/hello/detail.html">
                                         <img src="https://i01.appmifile.com/webfile/globalimg/us/800/miBoxS.jpg?width=140&height=140" alt="">
                                         <p>Mi Box S</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
-                                    <a href="#">
+                                    <a href="/{$code}/product/hello/detail.html">
                                         <img src="https://i01.appmifile.com/webfile/globalimg/us/800/Projector.jpg?width=140&height=140" alt="">
                                         <p>Mi Laser Projector 150''</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
-                                    <a href="#">
+                                    <a href="/{$code}/product/hello/detail.html">
                                         <img src="https://i01.appmifile.com/webfile/globalimg/us/Product/smartcompactprojector/compactprojector140.jpg?width=140&height=140" alt="">
                                         <p>Mi Smart Compact Projector</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
-                                    <a href="#">
+                                    <a href="/{$code}/product/hello/detail.html">
                                         <img src="https://i01.appmifile.com/webfile/globalimg/us/800/secutrity-camera-140140.jpg?width=140&height=140" alt="">
                                         <p>Mi Home Security Camera</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
-                                    <a href="#">
+                                    <a href="/{$code}/product/hello/detail.html">
                                         <img src="https://i01.appmifile.com/webfile/globalimg/us/Product/360camera/140pic.jpg?width=140&height=140" alt="">
                                         <p>Mi Home Security Camera 360° 1080P</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
-                                    <a href="#">
+                                    <a href="/{$code}/product/hello/detail.html">
                                         <img src="https://i01.appmifile.com/webfile/globalimg/us/800/DeskLamp.png?width=140&height=140" alt="">
                                         <p>Mi LED Desk Lamp</p>
                                     </a>
