手机端产品列表+产品详情切模块+各个页面连接调试

--- a/app/frontend/view/desktop/home/index.html
+++ b/app/frontend/view/desktop/home/index.html
@@ -22,7 +22,7 @@
                     {$vo.description}
                 </p>
                 <span>
-                    <a href="#" data-swiper-parallax="-4500" data-swiper-parallax-opacity="0">
+                    <a href="{$vo.path}" data-swiper-parallax="-4500" data-swiper-parallax-opacity="0">
                         {$vo.button}
                     </a>
                 </span>
