--- a/app/frontend/view/mobile/common/nav.html
+++ b/app/frontend/view/mobile/common/nav.html
@@ -3,7 +3,7 @@
     <div class="nav" id="nav">
         <div class="logo">
             <h1>
-                <a href="./Home.html">
+                <a href="/">
                     <img src="{$BaseSetting.logo}" alt="">
                 </a>
             </h1>
@@ -20,19 +20,19 @@
                 <a class="item-link" href="/{$code}/product/index.html">All Products</a>
             </li>
             <li class="menu-item">
-                <a class="item-link" href="./product-list.html">USB Fan</a>
+                <a class="item-link" href="/{$code}/product/index.html">USB Fan</a>
             </li>
             <li class="menu-item">
-                <a class="item-link" href="./product-list.html">Table Lamp</a>
+                <a class="item-link" href="/{$code}/product/index.html">Table Lamp</a>
             </li>
             <li class="menu-item">
-                <a class="item-link" href="./product-list.html">Holder</a>
+                <a class="item-link" href="/{$code}/product/index.html">Holder</a>
             </li>
             <li class="menu-item">
-                <a class="item-link" href="./product-list.html">Humidifier</a>
+                <a class="item-link" href="/{$code}/product/index.html">Humidifier</a>
             </li>
             <li class="menu-item">
-                <a class="item-link" href="./product-list.html">Aromatherapy Diffuse</a>
+                <a class="item-link" href="/{$code}/product/index.html">Aromatherapy Diffuse</a>
             </li>
             <li class="menu-item">
                 <a class="item-link" href="#">Store <span class="iconfont iconarrow-down"></span></a>
