--- a/app/frontend/view/mobile/home/index.html
+++ b/app/frontend/view/mobile/home/index.html
@@ -1,5 +1,5 @@
 {extend name="mobile/common/base" /}
-<title>{$BaseSetting.title} - mintHouz</title>
+<title>{$data.title} - mintHouz</title>
 {block name="seo"}
 <meta name="description" content="{$data.description}">
 <meta name="keywords" content="{$data.keywords}">
