--- a/app/frontend/view/mobile/common/footer.html
+++ b/app/frontend/view/mobile/common/footer.html
@@ -2,16 +2,16 @@
     <div class="foot">
         <div class="foot-item">
             <dl>
+                <dt>About</dt>
+                {volist name="list" id="vo"}
+                <dd><a href="/{$code}/about/{$vo.url}">{$vo.title}</a></dd>
+                {/volist}
+            </dl>
+            <dl>
                 <dt>STORE</dt>
                 <dd><a href="#">Amazon</a></dd>
                 <dd><a href="#">Newegg</a></dd>
                 <dd><a href="#">eBay</a></dd>
-            </dl>
-            <dl>
-                <dt>About</dt>
-                <dd><a href="#">minthouz</a></dd>
-                <dd><a href="#">User Agreement</a></dd>
-                <dd><a href="#">Privacy Policy</a></dd>
             </dl>
             <dl>
                 <dt>FIND US</dt>
