--- a/public/static/frontend/desktop/css/page/Product-detail.less
+++ b/public/static/frontend/desktop/css/page/Product-detail.less
@@ -58,7 +58,7 @@
             }
         }
         .active {
-            color: #888;
+            color: @activeColor;
             cursor: default;
         }
         a {
