--- a/app/frontend/view/mobile/common/base.html
+++ b/app/frontend/view/mobile/common/base.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    {block name="seo"}
+    <!--    SEO块-->
+    {/block}
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="{{frontend}}/lib/iconfont/iconfont.css">
     <link rel="stylesheet" href="{{frontend}}/mobile/css/public/components.css">
