--- a/app/frontend/view/desktop/common/base.html
+++ b/app/frontend/view/desktop/common/base.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="{{frontend}}/lib/iconfont/iconfont.css">
     <link rel="stylesheet" href="{{frontend}}/desktop/css/public/components.css">
+    {block name="seo"}
+<!--    SEO块-->
+    {/block}
     {block name="style"}
     <!-- 私有页面样式 -->
     {/block}
